bin/testsuite/tests/compiler/src/errors/compiler724.swg
#global testerror "Err0604"

func toto(x: s8) {}

//#[Swag.PrintBc]
#test
{
    toto(128)
}
